# sm-oversight

./: CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  PUBLISHING.md  README.md  SPEC.md  VENDORED.md  WHITEPAPER.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: propose_approve_verify.py
sm_arp/: __init__.py  identity.py  receipts.py  store.py
sm_oversight/: __init__.py  context.py  gesture.py  quorum.py  verify.py
tests/: test_sm_oversight.py  test_smoke.py
