[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sm-oversight"
version = "0.1.0"
description = "Human oversight protocol — signed approve/deny/escalate gestures with M-of-N quorum, as an auditable ARP receipt chain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "stellarminds.ai" }]
keywords = ["nanda", "oversight", "human-in-the-loop", "eu-ai-act", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=41.0",
    "base58>=2.1",
    "jcs>=0.2",
    "sm-arp>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "coverage>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sm_oversight"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["sm_oversight"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[[tool.mypy.overrides]]
module = ["jcs", "base58", "sm_arp", "sm_arp.*"]
ignore_missing_imports = true
