[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sm-oversight"
version = "0.1.0"
description = "Human oversight protocol — signed approve/deny/escalate gestures with M-of-N quorum, as an auditable ARP receipt chain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "stellarminds.ai" }]
keywords = ["nanda", "oversight", "human-in-the-loop", "eu-ai-act", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=41.0",
    "base58>=2.1",
    # Required by the vendored sm_arp/ (the canonical ARP receipt impl). sm_arp
    # is vendored in-tree rather than fetched from PyPI/git — see VENDORED.md for
    # provenance + the re-sync procedure.
    "jcs>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "coverage>=7.0",
]

[tool.hatch.build.targets.wheel]
# sm_arp is vendored in-tree (VENDORED.md), so ship it in the wheel — the
# package then has no external dependency to fetch at install time.
packages = ["sm_oversight", "sm_arp"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored upstream code — not held to this repo's lint rules.
extend-exclude = ["sm_arp"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.isort]
# sm_arp is vendored in-tree (VENDORED.md) but is upstream's library, not our
# code — keep it sorted as a third-party import, not first-party.
known-third-party = ["sm_arp"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["sm_oversight"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[[tool.mypy.overrides]]
# jcs / base58 ship no type stubs — treat their imports as untyped rather than
# failing strict mode on missing stubs.
module = ["jcs", "base58"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# sm_arp is vendored in-tree (VENDORED.md). It is its upstream's code, so we
# don't hold it to this repo's strict mode: skip following into it and treat its
# symbols as untyped at the sm_oversight boundary.
module = "sm_arp.*"
ignore_missing_imports = true
follow_imports = "skip"
